[gd_scene load_steps=2 format=2]

[ext_resource path="res://Dancer/Dancer.gd" type="Script" id=1]

[node name="Dancer" type="Node2D"]
script = ExtResource( 1 )

[node name="Pelvis" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2( 2, 1 )

[node name="Knee_Right" type="Node2D" parent="Pelvis"]
unique_name_in_owner = true
position = Vector2( 41, 64 )

[node name="Foot_Right" type="Node2D" parent="Pelvis/Knee_Right"]
unique_name_in_owner = true
position = Vector2( -1, 67 )

[node name="Toe_Right" type="Node2D" parent="Pelvis/Knee_Right/Foot_Right"]
unique_name_in_owner = true
position = Vector2( 37, 4 )

[node name="Knee_Left" type="Node2D" parent="Pelvis"]
unique_name_in_owner = true
position = Vector2( -60, 59 )

[node name="Foot_Left" type="Node2D" parent="Pelvis/Knee_Left"]
unique_name_in_owner = true
position = Vector2( 1, 66 )

[node name="Toe_Left" type="Node2D" parent="Pelvis/Knee_Left/Foot_Left"]
unique_name_in_owner = true
position = Vector2( -33, 9 )

[node name="Neck" type="Node2D" parent="Pelvis"]
unique_name_in_owner = true
position = Vector2( 0, -148 )

[node name="Shoulder_Left" type="Node2D" parent="Pelvis/Neck"]
unique_name_in_owner = true
position = Vector2( -61, 0 )

[node name="UpperArm_Left" type="Node2D" parent="Pelvis/Neck/Shoulder_Left"]
unique_name_in_owner = true
position = Vector2( -44, 54 )

[node name="LowerArm_Left" type="Node2D" parent="Pelvis/Neck/Shoulder_Left/UpperArm_Left"]
unique_name_in_owner = true
position = Vector2( 38, 55 )

[node name="Shoulder_Right" type="Node2D" parent="Pelvis/Neck"]
unique_name_in_owner = true
position = Vector2( 66, 3 )

[node name="UpperArm_Right" type="Node2D" parent="Pelvis/Neck/Shoulder_Right"]
unique_name_in_owner = true
position = Vector2( 35, 49 )

[node name="LowerArm_Right" type="Node2D" parent="Pelvis/Neck/Shoulder_Right/UpperArm_Right"]
unique_name_in_owner = true
position = Vector2( -32, 59 )

[node name="Head" type="Node2D" parent="Pelvis/Neck"]
unique_name_in_owner = true
position = Vector2( 0, -73 )
